src/test/test-models/bad/data_index/non_data_index9.stan
parameters {
  real y[3];

}
transformed parameters {
  unit_vector[size(y)] z;
}
